--- a/style.css
+++ b/style.css
@@ -11,10 +11,13 @@ h1{
 	color: #fff;
 	font-size: 78px;
 	padding-top: 30px;
+	cursor: initial;
 }
 h2{
 	text-align: center;
 	font-weight: bold;
+	margin: 8px 0 5px 0;
+	cursor: initial;
 }
 
 /*==============SECTIONS=========*/
@@ -26,17 +29,17 @@ main{
 .my-music{
 	height: 180vh;
 	width: 100%;
-	background-color: #1498f0;
+	background: linear-gradient(#1498f0, #1bb177 65%, #000);
 }
 .about-me{
 	height: 100vh;
 	width: 100%;
-	background-color: #000;
+	background: linear-gradient(#000 45%, #1498f0);
 }
 .contact{
 	height: 50vh;
 	width: 100%;
-	background-color: #1498f0;
+	background: #1498f0;
 }
 footer{
 	height: 200px;
@@ -53,6 +56,7 @@ footer{
 	width: 100vw;
 	padding-top: 60px;
 }
+
 .left, .right, .middle{
 	height: 400px;
 	width: 700px;
@@ -63,10 +67,11 @@ footer{
 	justify-content: center;
 	height: 360px;
 }
-button{
+main button{
 	width: 200px;
 	height: 80px;
 	border: 3px solid #fff;
+	border-radius: 12px;
 	background-color: #1498f0;
 	color: #fff;
 	font-size: 20px;
@@ -74,7 +79,7 @@ button{
 	margin-top: 100px;
 	transition: .6s;
 }
-button:hover{
+main button:hover{
 	background-color: #000;
 	cursor: pointer;
 	transition: .4s cubic-bezier(.76, .13, .23, .94);
@@ -91,6 +96,7 @@ img.right{
 	position: relative;
 	right: 640px;
 }
+
 
 /*=================MENU===========*/
 #sidomeny{
@@ -127,16 +133,19 @@ img.right{
 .toggle-btn span{
 	width: 50px;
 	height: 4px;
+	border-radius: 3px;
 	background: #fff;
 	display: block;
 	margin-top: 10px;
 	transition: .6s cubic-bezier(.76, .13, .23, .94);
 }
-#sidomeny .toggle-btn.active span:nth-child(2){
-	width: 53px;
+#sidomeny .toggle-btn.active span:nth-child(1){
+	width: 40px;
 	transition: .6s cubic-bezier(.76, .13, .23, .94);
-	transform: rotate(30deg);
-	border-radius: 4px;
+}
+#sidomeny .toggle-btn.active span:nth-child(3){
+	width: 40px;
+	transition: .6s cubic-bezier(.76, .13, .23, .94);
 }
 ul li{
 	list-style: none;
@@ -166,13 +175,17 @@ ul li a:hover{
 	flex-wrap: wrap;
 	padding: 20px 0;
 }
+.card-wrapper-down{
+	display: flex;
+	justify-content: center;
+}
 .card-wrapper #card1{
 	width: 440px;
 	height: 560px;
 	background-color: #fff;
 	box-shadow: -9px 9px 20px 0px #53514d;
 	transition: .6s;
-margin: 20px 50px;
+    margin: 20px 50px;
 }
 .card-wrapper #card2{
 	width: 440px;
@@ -182,6 +195,9 @@ margin: 20px 50px;
 	transition: .6s;
 	margin: 20px 50px;
 }
+
+
+
 .card-wrapper.img-wrapper{
 	width: 420px;
 	height: 420px;
@@ -189,11 +205,41 @@ margin: 20px 50px;
 .img-wrapper img{
 	height: 440px;
 }
+.img-wrapper{
+	transition: 1s;
+}
+.img-wrapper#left.fadeOut, .img-wrapper#right.fadeOut{
+	transform: rotateY(90deg);
+	opacity: 0;
+	transition: .6s;
+}
 #card1:hover, #card2:hover{
 	cursor: pointer;
+	transform: scale(1.05);
 	transition: .6s;
-	transform: scale(1.05, 1.05);
 }
+
+
+.card-button-left, .card-button-right{
+	width: 120px;
+	height: 50px;
+	margin: 5px;
+	border: 3px solid #fff;
+	border-radius: 12px;
+	background-color: #1498f0;
+	color: #fff;
+	font-size: 16px;
+	transition: .6s;
+}
+.card-button-left:focus, .card-button-right:focus{
+	outline: none;
+}
+.card-button-left:hover, .card-button-right:hover{
+	background-color: #000;
+	cursor: pointer;
+	transition: .4s cubic-bezier(.76, .13, .23, .94);
+}
+
 img.side-deco-left{
 	position: relative;
 	left: -200px;
@@ -208,10 +254,72 @@ img.side-deco-right{
 }
 
 
+.hidden-info-card-left, .hidden-info-card-right{
+	width: 420px;
+	height: 420px;
+	margin: 0;
+	padding: 30px;
+	position: relative;
+	bottom: 540px;
+	visibility: hidden;
+	transition: .6s;
+	cursor: initial;
+	transform: rotateY(90deg);
+	opacity: 0;
+}
+.hidden-info-card-left.showInfo, .hidden-info-card-right.showInfo{
+	visibility: visible;
+	transition: .6s;
+	transform: rotateY(0deg);
+	opacity: 1;
+}
 
+/*.spotify-button{
+	background-color: #1db954;
+	height: 60px;
+	width: 150px;
+	border-radius: 12px;
+	border: none;
+	color: #fff;
+	transition: .6s;
+	margin: 0 50px;
+}
+.spotify-button:focus{
+	outline: none;
+}
+.spotify-button:hover{
+	cursor: pointer;
+	background-color: #188a40;
+	transition: .6s;
+}*/
 /*===============ABOUT============*/
-
-
+.container-about{
+	display: flex;
+	width: 100vw;
+	height: 700px;
+	padding: 20px 80px;
+	margin: 30px 0px;
+	justify-content: flex-start;
+}
+.text-box{
+	width: 60vw;
+	height: 700px;
+	color: #fff;
+	line-height: 1.8rem;
+}
+.text-box h2{
+	text-align: left;
+}
+.profile{
+	width: 400px;
+	height: 400px;
+	margin-left: 80px;
+}
+.profile img{
+	width: 400px;
+	height: 400px;
+	border-radius: 50%;
+}
 
 /*==============CONTACT===========*/
 
@@ -222,25 +330,24 @@ img.side-deco-right{
 
 
 /*==============ANIMATIONS===============*/
-@keyframes fadeInZ{
-    0%{
-        opacity: 0;
-        height: 150px;
-        width: 300px;
-        }
-    50%{
-        opacity: 0.3;
-        
-        }
-    100%{
-        opacity: 1;
-        }
+img.left{
+    animation: moveInLeft .8s forwards 0s ease-out;
+}
+img.right{
+    animation: moveInRight .8s forwards 0s ease-out;
+}
+img.right.scrollAnimation{
+	animation: moveOutRight 2s forwards ease-out;
 }
 
+img.left.scrollAnimation{
+	animation: moveOutLeft 2s forwards ease-out;
+}
 
 @keyframes moveInLeft{
     0%{
         transform: translateX(-1400px);
+        opacity: 0;
         }
 
     100%{
@@ -251,6 +358,7 @@ img.side-deco-right{
 @keyframes moveInRight{
     0%{
         transform: translateX(1400px);
+        opacity: 0;
         }
 
     100%{
@@ -258,9 +366,24 @@ img.side-deco-right{
         }
 }
 
-img.left{
-    animation: moveInLeft .8s forwards 0s ease-out;
+@keyframes moveOutRight{
+    0%{
+        transform: translateX(0);
+        }
+
+    100%{
+        transform: translateX(1400px);
+        opacity: 0;
+        }
 }
-img.right{
-    animation: moveInRight .8s forwards 0s ease-out;
+@keyframes moveOutLeft{
+    0%{
+        transform: translateX(0);
+        }
+
+    100%{
+        transform: translateX(-1400px);
+        opacity: 0;
+        }
 }
+
