--- a/style.css
+++ b/style.css
@@ -4,50 +4,94 @@ body, html{
 	padding: 0;
 	overflow-x: hidden;
 	scroll-behavior: smooth;
-	font-family: 'Ubuntu';
+	font-family: 'Ubuntu', sans-serif;
 }
 h1{
 	text-align: center;
 	color: #fff;
 	font-size: 78px;
-	padding-top: 30px;
-	cursor: initial;
+	padding-top: 120px;
 }
 h2{
 	text-align: center;
 	font-weight: bold;
 	margin: 8px 0 5px 0;
-	cursor: initial;
+	color: #fff;
 }
+h3{
+	text-align: center;
+	color: #fff;
+	font-size: 20px;
+}
+.loader{
+	position: fixed;
+	z-index: 99;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: #000;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.loader > img{
+	width: 100px;
+}
+.loader.hidden{
+	animation: Loader 1s forwards;
+}
+
 
 /*==============SECTIONS=========*/
 main{
-	height: 100vh;
+	height: 152vh;
 	width: 100%;
-	background-color: #000;
+	overflow: hidden;
 }
 .my-music{
 	height: 180vh;
 	width: 100%;
-	background: linear-gradient(#1498f0, #1bb177 65%, #000);
+	overflow: hidden;
 }
 .about-me{
 	height: 100vh;
 	width: 100%;
-	background: linear-gradient(#000 45%, #1498f0);
+	overflow: hidden;
 }
 .contact{
-	height: 50vh;
+	height: 80vh;
 	width: 100%;
-	background: #1498f0;
+	overflow: hidden;
 }
 footer{
-	height: 200px;
+	height: 100px;
 	width: 100%;
 	background-color: #111;
+	overflow: hidden;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	text-align: center;
+}
+.background-gradient{
+	background: linear-gradient(#000 10%, #1bb177 40%, #1498f0);
 }
 
 /*===================FRONT PAGE==============*/
+
+.front-page-img{
+	height: 600px;
+	width: 600px;
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	z-index: -999;
+}
+.front-page-img img{
+	width: 100vw;
+}
 
 .container-main{
 	display: flex;
@@ -68,16 +112,20 @@ footer{
 	height: 360px;
 }
 main button{
-	width: 200px;
+	width: 240px;
 	height: 80px;
 	border: 3px solid #fff;
-	border-radius: 12px;
 	background-color: #1498f0;
 	color: #fff;
 	font-size: 20px;
 	font-weight: bold;
 	margin-top: 100px;
 	transition: .6s;
+	z-index: 999;
+}
+main button#callToAction.attention{
+	background-color: #f34951;
+	transition: .4s;
 }
 main button:hover{
 	background-color: #000;
@@ -87,6 +135,10 @@ main button:hover{
 h1#title{
 	font-size: 90px;
 	padding-top: 80px;
+}
+#home h3{
+	color: #fff;
+	text-align: center;
 }
 img.left{
 	position: relative;
@@ -119,6 +171,10 @@ img.right{
 #sidomeny ul a li:hover{
 	color: #00529f;
 }
+#sidomeny ul a:hover{
+	text-decoration: underline;
+}
+
 #sidomeny.active{
 	left: 0;
 }
@@ -162,40 +218,44 @@ ul li a:hover{
 	text-decoration: none;
 	color: #1498f0;
 }
-
+#sidomeny img{
+	height: 80px;
+	position: absolute;
+	bottom: 20px;
+	left: 40px;
+}
 
 
 
 /*===========MUSIC===========*/
+.exclusives{
+	margin-top: 150px;
+}
+.my-music h2{
+	font-size: 20px;
+}
 .card-wrapper{
 	width: 100vw;
-	height: 560px;
+	height: 620px;
 	display: flex;
 	justify-content: center;
 	flex-wrap: wrap;
 	padding: 20px 0;
 }
+.card-wrapper h2{
+	color: #000;
+}
 .card-wrapper-down{
 	display: flex;
 	justify-content: center;
 }
-.card-wrapper #card1{
+.card-wrapper #card1, .card-wrapper #card2{
 	width: 440px;
 	height: 560px;
 	background-color: #fff;
-	box-shadow: -9px 9px 20px 0px #53514d;
 	transition: .6s;
     margin: 20px 50px;
 }
-.card-wrapper #card2{
-	width: 440px;
-	height: 560px;
-	background-color: #fff;
-	box-shadow: -9px 9px 20px 0px #53514d;
-	transition: .6s;
-	margin: 20px 50px;
-}
-
 
 
 .card-wrapper.img-wrapper{
@@ -224,8 +284,7 @@ ul li a:hover{
 	width: 120px;
 	height: 50px;
 	margin: 5px;
-	border: 3px solid #fff;
-	border-radius: 12px;
+	border: none;
 	background-color: #1498f0;
 	color: #fff;
 	font-size: 16px;
@@ -240,19 +299,70 @@ ul li a:hover{
 	transition: .4s cubic-bezier(.76, .13, .23, .94);
 }
 
+.container-music{
+	display: flex;
+	width: 100%;
+	height: 400px;
+	margin-top: 80px;
+	justify-content: center;
+}
+.container-form{
+	display: flex;
+	justify-content: center;
+	padding: 30px 0;
+}
+.container-form form{
+	display: flex;
+	flex-direction: column;
+}
+.container-form button{
+	background-color: #1498f0;
+}
+
 img.side-deco-left{
 	position: relative;
 	left: -200px;
-	bottom: 150px;
+	bottom: 180px;
 	transform: rotate(90deg);
 	z-index: 1;
 }
 img.side-deco-right{
 	position: relative;
-	right: -1100px;
+	right: -1600px;
+	bottom: 800px;
 	transform: rotate(90deg);
+	z-index: 1;
 }
-
+.play-music{
+	position: fixed;
+	right: -280px;
+	top: 0px;
+	z-index: 2;
+	transition: .8s cubic-bezier(.76, .13, .23, .94);
+}
+.play-music.showPlayBar{
+	right: 0px;
+	transition: .8s cubic-bezier(.76, .13, .23, .94);
+}
+iframe.spotify{
+	width: 280px;
+	height: 100vh;
+}
+.exclusive-btn button{
+	width: 200px;
+	height: 80px;
+	border: 3px solid #fff;
+	background-color: #1498f0;
+	color: #fff;
+	font-size: 20px;
+	font-weight: bold;
+	transition: .6s;
+}
+.exclusive-btn button:hover{
+	background-color: #000;
+	transition: .6s;
+	cursor: pointer;
+}
 
 .hidden-info-card-left, .hidden-info-card-right{
 	width: 420px;
@@ -274,24 +384,6 @@ img.side-deco-right{
 	opacity: 1;
 }
 
-/*.spotify-button{
-	background-color: #1db954;
-	height: 60px;
-	width: 150px;
-	border-radius: 12px;
-	border: none;
-	color: #fff;
-	transition: .6s;
-	margin: 0 50px;
-}
-.spotify-button:focus{
-	outline: none;
-}
-.spotify-button:hover{
-	cursor: pointer;
-	background-color: #188a40;
-	transition: .6s;
-}*/
 /*===============ABOUT============*/
 .container-about{
 	display: flex;
@@ -310,28 +402,87 @@ img.side-deco-right{
 .text-box h2{
 	text-align: left;
 }
+.text-box p{
+	font-size: 18px;
+}
 .profile{
 	width: 400px;
 	height: 400px;
 	margin-left: 80px;
 }
 .profile img{
-	width: 400px;
-	height: 400px;
-	border-radius: 50%;
+	inline-size: 30rem;
+	transition: .6s;
+	box-shadow: 0px 10px 18px 0px #414141;
+}
+.profile img.rotateProfile{
+	transform: rotate(12deg);
+	transition: .6s;
+	box-shadow: 0px 10px 18px 0px #414141;
 }
 
 /*==============CONTACT===========*/
+input{
+	height: 40px;
+	padding: 10px;
+}
+textarea{
+	height: 200px;
+	padding: 10px;
+	border: 2px solid #fff;
+}
+input:focus, textarea:focus{
+	border: 2px solid #000;
+}
+.contact-form{
+	width: 400px;
+	border: none;
+	outline: none;
+	margin: 5px 0;
+}
+.contact-form-wrapper{
+	display: flex;
+	justify-content: center;
+	margin: 20px 120px;
+}
+form h2{
+	color: #fff;
+	font-size: 24px;
+}
+form button{
+	width: 400px;
+	height: 50px;
+	background: #1bb177;
+	color: #fff;
+	font-size: 20px;
+	font-weight: bold;
+	letter-spacing: 2px;
+	margin-top: 20px;
+	border: 2px solid #fff;
+	transition: .4s;
+}
+form button:hover{
+	background-color: #000;
+	cursor: pointer;
+	transition: .4s;
+}
+
 
 
 
 /*=============FOOTER=============*/
-
-
+h5{
+	color: #fff;
+	font-size: 16px;
+}
+p{
+	color: #fff;
+	font-size: 12px;
+}
 
 /*==============ANIMATIONS===============*/
 img.left{
-    animation: moveInLeft .8s forwards 0s ease-out;
+    animation: moveInLeft .8s forwards ease-out;
 }
 img.right{
     animation: moveInRight .8s forwards 0s ease-out;
@@ -387,3 +538,9 @@ img.left.scrollAnimation{
         }
 }
 
+@keyframes Loader{
+	100%{
+		opacity: 0;
+		visibility: hidden;
+	}
+}
