--- a/style.css
+++ b/style.css
@@ -101,8 +101,8 @@ footer{
 	padding-top: 60px;
 }
 
-.left, .right, .middle{
-	height: 400px;
+img.left, img.right, img.middle{
+	height: 350px;
 	width: 700px;
 }
 
@@ -263,7 +263,7 @@ ul li a:hover{
 	height: 420px;
 }
 .img-wrapper img{
-	height: 440px;
+	height: 300px;
 }
 .img-wrapper{
 	transition: 1s;
@@ -413,10 +413,10 @@ iframe.spotify{
 .profile img{
 	inline-size: 30rem;
 	transition: .6s;
-	box-shadow: 0px 10px 18px 0px #414141;
+	
 }
-.profile img.rotateProfile{
-	transform: rotate(12deg);
+.profile img.scaleProfile{
+	transform: scale(1.05);
 	transition: .6s;
 	box-shadow: 0px 10px 18px 0px #414141;
 }
