--- a/sizing.css
+++ b/sizing.css
@@ -1,3 +1,62 @@
+/*=================Mobile Version============*/
+
+@media only screen 
+and (min-device-width : 375px) 
+and (max-device-width : 812px)
+and (-webkit-device-pixel-ratio : 3) { 
+body, html{
+	overflow-x: hidden;
+}
+	main{
+	height: 100vh;
+	width: 100%;
+	overflow-x: hidden;
+	background: #000;
+}
+.my-music{
+	height: 180vh;
+	width: 100%;
+	overflow: hidden;
+}
+.about-me{
+	height: 100vh;
+	width: 100%;
+	overflow: hidden;
+}
+.contact{
+	height: 80vh;
+	width: 100%;
+	overflow: hidden;
+}
+
+img.side-deco-left, img.side-deco-right{
+	visibility: hidden;
+}
+h1{
+	font-size: 55px;
+	padding-top: 120px;
+}
+.container-main{
+	height: 450px;
+	width: 100vw;
+	padding-top: 60px;
+}
+img#logo{
+	height: 150px;
+	margin-top: 50px;
+}
+#sidomeny{
+	visibility: hidden;
+}
+main h3{
+	font-size: 30px;
+}
+}
+
+
+
+/*==================================*/
+
 @media screen and (max-width: 1400px){
 
 img.left{
@@ -22,9 +81,8 @@ h1#title{
 	height: 300px;
 	padding: 0;
 }
-button{
-	width: 160px;
-	margin-top: 30px;
+.container-main img{
+	height: 200px;
 }
 
 
@@ -100,53 +158,18 @@ img.left, img.right, img.middle{
 	height: 300px;
 	width: 700px;
 }
-}
-
-
-/*=================Mobile Version============*/
-
-@media only screen 
-and (min-device-width : 375px) 
-and (max-device-width : 812px)
-and (-webkit-device-pixel-ratio : 3) { 
-	body, html{
-		overflow-x: hidden;
-	}
-	main{
-	height: 100vh;
-	width: 100%;
-	overflow-x: hidden;
-}
-.my-music{
-	height: 180vh;
-	width: 100%;
-	overflow: hidden;
-}
-.about-me{
-	height: 100vh;
-	width: 100%;
-	overflow: hidden;
-}
-.contact{
-	height: 80vh;
-	width: 100%;
-	overflow: hidden;
-}
-
-img.side-deco-left, img.side-deco-right{
-	visibility: hidden;
-}
-h1{
-	font-size: 55px;
-	padding-top: 120px;
-}
-.front-page-img img{
-	height: 1000px;
-	width: 1000px;
-}
-.container-main{
+.container-quiz{
 	height: 450px;
-	width: 100vw;
-	padding-top: 60px;
+}
+.option{
+	height: 50px;
+}
+.option span{
+	position: relative;
+    bottom: 18px;
 }
 }
+
+
+
+
