--- a/exclusive.css
+++ b/exclusive.css
@@ -30,10 +30,27 @@ iframe.spotify{
 .heading{
 	display: flex;
 	justify-content: center;
-	padding: 40px 0;
+	padding: 30px 0;
 }
 
-.loader{
+button#tryAgain{
+	width: 300px;
+	height: 80px;
+	background: #000;
+	color: #fff;
+	font-size: 24px;
+	border: 3px solid #fff;
+	display: none;
+	transition: .4s;
+}
+button#tryAgain:hover{
+	background: #1498f0;
+	color: #fff;
+	cursor: pointer;
+	transition: .4s;
+}
+
+.loadingScreen{
 	position: fixed;
 	z-index: 99;
 	top: 0;
@@ -45,10 +62,11 @@ iframe.spotify{
 	justify-content: center;
 	align-items: center;
 }
-.loader > img{
-	width: 100px;
+.loadingScreen > img{
+	width: 180px;
+	animation: loadingScreen 1s forwards;
 }
-.loader.hidden{
+.loadingScreen.hidden{
 	animation: Loader 1s forwards;
 }
 
@@ -84,6 +102,10 @@ iframe.spotify{
 	margin: 10px;
 	color: #fff;
 	background: #1498f0;
+}
+.option span{
+	position: relative;
+    bottom: 18px;
 }
 
 .next-btn{
@@ -124,7 +146,7 @@ span{
 	background: #000;
 }
 
-.test{
+.unlock{
 	display: flex;
 	justify-content: center;
 }
@@ -160,16 +182,24 @@ a:hover{
 	justify-content: space-around;
 	flex-direction: row;
 	flex-wrap: wrap;
-	margin: 10px 50px;
+	margin: 20px 50px;
 }
 
 .gallery img{
 	width: 300px;
-	padding: 15px:;
+	padding: 15px;
 	transition: .6s;
+	margin: 10px 0;
 }
 .gallery img:hover{
 	filter: grayscale(100%);
 	transform: scale(1.05);
 	transition: .6s;
+}
+
+.container-video{
+	display: flex;
+	justify-content: center;
+	width: 100vw;
+	height: 500px;
 }
