--- a/sizing.css
+++ b/sizing.css
@@ -1,62 +1,3 @@
-/*=================Mobile Version============*/
-
-@media only screen 
-and (min-device-width : 375px) 
-and (max-device-width : 812px)
-and (-webkit-device-pixel-ratio : 3) { 
-body, html{
-	overflow-x: hidden;
-}
-	main{
-	height: 100vh;
-	width: 100%;
-	overflow-x: hidden;
-	background: #000;
-}
-.my-music{
-	height: 180vh;
-	width: 100%;
-	overflow: hidden;
-}
-.about-me{
-	height: 100vh;
-	width: 100%;
-	overflow: hidden;
-}
-.contact{
-	height: 80vh;
-	width: 100%;
-	overflow: hidden;
-}
-
-img.side-deco-left, img.side-deco-right{
-	visibility: hidden;
-}
-h1{
-	font-size: 55px;
-	padding-top: 120px;
-}
-.container-main{
-	height: 450px;
-	width: 100vw;
-	padding-top: 60px;
-}
-img#logo{
-	height: 150px;
-	margin-top: 50px;
-}
-#sidomeny{
-	visibility: hidden;
-}
-main h3{
-	font-size: 30px;
-}
-}
-
-
-
-/*==================================*/
-
 @media screen and (max-width: 1400px){
 
 img.left{
@@ -90,24 +31,16 @@ h1#title{
 	width: 100vw;
 	height: 360px;
 }
-.card-wrapper #card1{
+.card-wrapper #card1, .card-wrapper #card2{
 	width: 300px;
 	height: 400px;
-	background-color: #fff;
-	transition: .6s;
-}
-.card-wrapper #card2{
-	width: 300px;
-	height: 400px;
-	background-color: #fff;
-	transition: .6s;
 }
 .card-wrapper.img-wrapper{
 	width: 300px;
 	height: 300px;
 }
 .img-wrapper img{
-	height: 300px;
+	height: 300px; 
 }
 .my-music{
 	height: 200vh;
@@ -169,6 +102,170 @@ img.left, img.right, img.middle{
     bottom: 18px;
 }
 }
+
+
+
+
+
+/*=================Mobile Version============*/
+
+@media only screen 
+and (min-device-width : 375px) 
+and (max-device-width : 812px)
+and (-webkit-device-pixel-ratio : 3) { 
+body, html{
+	overflow-x: hidden;
+	height: 400vh;
+	background-color: #000;
+}
+	main{
+	height: 100vh;
+	width: 100%;
+	overflow-x: hidden;
+	background: #000;
+}
+main button{
+	margin-top: -80px;
+}
+.my-music{
+	height: 180vh;
+	width: 100%;
+	overflow: hidden;
+}
+.about-me{
+	height: 100vh;
+	width: 100%;
+	overflow: hidden;
+}
+.contact{
+	height: 80vh;
+	width: 100%;
+	overflow: hidden;
+}
+h1{
+	font-size: 55px;
+	padding-top: 120px;
+}
+.container-main{
+	height: 450px;
+	width: 100vw;
+	padding-top: 60px;
+}
+img#logo{
+	height: 150px;
+	margin-top: 50px;
+}
+#sidomeny{
+	visibility: hidden;
+}
+.play-music{
+	display: none;
+}
+h1.exclusives{
+	margin-top: 420px;
+}
+.my-music h2{
+	width: 80%;
+	margin: auto;
+	font-size: 16px;
+}
+.card-wrapper #card1, .card-wrapper #card2{
+	width: 250px;
+	height: 350px;
+}
+.img-wrapper img{
+	height: 250px; 
+}
+.container-about{
+	flex-direction: column;
+	padding: 0 40px;
+	margin: auto;
+}
+.container-about .text-box p{
+	font-size: 14px;
+	width: 300px;
+}
+
+section#about{
+	height: 150vh;
+}
+.profile{
+	width: 300px;
+	height: 300px;
+	margin: 0;
+	position: relative;
+	top: 100px;
+}
+.profile img{
+	inline-size: 15rem;
+}
+h2.sign{
+	font-family: 'Nothing You Could Do', cursive; 
+	position: relative;
+	bottom: 40px;
+	left: 0;
+	color: #fff;
+}
+.contact-form{
+	width: 280px;
+}
+.contact-form-wrapper{
+	display: flex;
+	justify-content: center;
+}
+section#contact{
+	height: 105vh;
+}
+form button{
+	width: 280px; 
+}
+.front-page-img{
+	width: 100%;
+}
+.container-quiz{
+	height: 550px;
+	width: 300px;
+	background: #fff;
+	padding: 20px;
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+}
+.heading h2{
+	font-size: 22px;
+}
+.option{
+	width: 260px;
+	margin: 8px -1px;
+}
+.question{
+	font-size: 22px;
+	width: 300px;
+	margin: 30px -10px;
+}
+.hidden-result{
+	display: flex;
+	flex-direction: column;
+	width: 0;
+}
+.result{
+	font-size: 30px;
+	position: absolute;
+	left: 0;
+	width: 100%;
+}
+.unlock a button{
+	margin-top: 100px;
+}
+video{
+	width: 285px;
+}
+}
+
+
+
+/*==================================*/
+
 
 
 
